--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.3.0",
+    "koa-session": "^5.5.1",
     "koa-static": "^4.0.2",
     "md5": "^2.2.1",
     "mysql": "^2.15.0"
