--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "axios": "^0.17.1",
     "bluebird": "^3.5.1",
     "bookshelf": "^0.11.1",
+    "formidable": "^1.1.1",
     "knex": "^0.13.0",
     "koa": "^2.4.1",
+    "koa-body": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.3.0",
     "koa-session": "^5.5.1",
