--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.17.1",
     "bluebird": "^3.5.1",
     "bookshelf": "^0.11.1",
+    "bookshelf-uuid": "^1.0.0",
     "formidable": "^1.1.1",
     "knex": "^0.13.0",
     "koa": "^2.4.1",
